objects/LBI__EnrichmentMapping__c.object
<CustomObject>
    <fields>
        <fullName>LBI__EnrichmentFieldDescribe__c</fullName>
        <label>Enrichment Field Describe</label>
        <referenceTo>LBI__EnrichmentFieldDescribe__c</referenceTo>
        <relationshipLabel>Lattice Enrichment Mappings</relationshipLabel>
        <relationshipName>LatticeEnrichmentMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Enrichment Mapping</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__EnrichmentFieldDescribe__c</columns>
        <columns>LBI__Object__c</columns>
        <columns>LBI__FieldName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>Enrichment Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Enrichment Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>